# animeku-cli

./: Cargo.toml  README.md
src/: animeku.rs  input.rs  main.rs  models.rs  util.rs
src/ext/: anime.rs  mod.rs  movie.rs
src/ext/nontonanime/: anime.rs  mod.rs  movie.rs
src/ext/tenflix/: mod.rs
