[package]
name = "animeku-cli"
version = "0.1.44"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
base64 = "0.21.7"
clearscreen = "2.0.1"
colored = "2.1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
html-escape = "0.2.13"
humansize = "2.1.3"
image = "0.24.8"
once_cell = "1.19.0"
open = "5.0.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
viuer = "0.7.1"
